--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,22 @@ services:
   app:
     build: .
     container_name: fastapi_app
-    volumes:
-      - ./data:/data
+    environment:
+      DATABASE_URL: postgresql://postgres:password@db:5432/mydatabase
+    depends_on:
+      - db
     expose:
       - 80
+
+  db:
+    image: postgres:latest
+    container_name: postgres_db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydatabase
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   nginx:
     image: nginx:latest
@@ -30,3 +42,6 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/www/certbot:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
+volumes:
+  postgres_data:
