--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - db
     expose:
       - 80
+    volumes:
+      - .:/app  # Ensure the app directory is correctly mapped
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
 
   db:
     image: postgres:latest
